Added url return error warning to submit page

--- a/force-app/main/default/classes/SummitEventsSubmitController.cls
+++ b/force-app/main/default/classes/SummitEventsSubmitController.cls
@@ -21,7 +21,6 @@ public with sharing class SummitEventsSubmitController {
     public Double existingPaymentAmount { get; set; }
     public Double eventOnlyPaymentAmount { get; set; }
     public String eventOnlyPaymentAmountFormatted { get; set; }
-    public String paymentItemized { get; set; }
     public Boolean hasPaymentGateway { get; set; }
     public Boolean hasFees { get; set; }
 
@@ -142,7 +141,7 @@ public with sharing class SummitEventsSubmitController {
     public PageReference submitRegistration() {
         PageReference confirmPage = Page.SummitEventsConfirmation;
         //Is there a payment gateway, are there fees
-        If (String.isNotBlank(eventPage.Payment_Gateway__c) && eventPage.Payment_Gateway__c != 'None') {
+        if (String.isNotBlank(eventPage.Payment_Gateway__c) && eventPage.Payment_Gateway__c != 'None') {
             if (eventFees.size() > 0) {
                 //Get community base URL from custom settings
                 hasPaymentGateway = true;
